--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
