--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
 }
